# AIOps_CustomizableAIAgent

./: .pdm-python  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
Jenkins/: Dockerfile
app/: __main__.py
app/backend/: __init__.py  api.py
app/frontend/: __init__.py  ui.py
src/aiops/: ai_agent.py  config.py  exception.py  logger.py
src/aiops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
